# ml_rust

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  models.rs  router.rs  schemas.rs  utils.rs
src/ml/: mod.rs  transforms.rs
src/ml/facial_detection/: mod.rs  post_processing.rs  predictor.rs
src/ml/facial_processing/: mod.rs  transforms.rs
src/ml/facial_processing/detection/: post_processing.rs  predictor.rs
src/ml/facial_processing/recognition/: mod.rs  predictor.rs
src/ml/facial_recognition/: predictor.rs
src/ml/search/: mod.rs
src/ml/search/textual/: predictor.rs
src/ml/search/visual/: predictor.rs
src/services/: facial_processing.rs  search.rs
tests/integration/: facial_detection.rs  facial_recognition.rs  mod.rs
tests/unit/: transforms.rs
