[package]
name = "ml_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = "2.0.0-rc.7"
ndarray = "0.16"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
image = "0.25.5"
nalgebra = "0.33.2"
rayon = "1.10.0"

# Web
axum = { version = "0.7.5", features = ["macros", "multipart"] }
jsonwebtoken = "9.3.0"
tokio = { version = "1.28.2", features = ["full"] }
utoipa = { features = ["axum_extras"], version = "4.2.3" }
utoipa-swagger-ui = { features = ["axum"], version = "7.1.0" }
env_logger = "0.11.5"
axum_typed_multipart = "0.11.1"


# Search models
tokenizers = { version = "0.19.1", features = ["hf-hub", "http"] }
itertools = "0.13.0"
toml = "0.8.19"
